working at navbar & do some standarad styles

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerce</title>
+    <meta http=equiv=X-UA-Compatible" content = "ie=edge">
+    <title>FCIENS-Souq</title>
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+    <!--Custom css-->
+    <link rel = "stylesheet" href ="styles/style.css" type="text/css">
 </head>
 <body>
-    
+    <!--navbar-->
+    <nav class=".navbar">
+        <div class="navbar-center">
+            <spn class="nav-icon">
+                <i class="fas fa-bars"></i>
+            </spn>
+            <img src="./images/logo.svg" alt = "Our Logo">
+        </div>
+    </nav>
+    <!--End of navbar-->
+    <script src ="apps/app.js"></script>
 </body>
-</html>
+</html> 
