working on navbar & cart item color

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                 <i class="fas fa-bars"></i>
             </spn>
             <img src="./images/logo.svg" alt = "Our Logo">
+            <div class="cart-btn">
+                <spn class="nav-icon">
+                    <i class="fas fa-cart-plus"></i>
+                </spn>
+                <div class="cart-items">
+                    0
+                </div>
+            </div>
         </div>
     </nav>
     <!--End of navbar-->
