--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!--navbar-->
     <nav class="navbar">
         <div class="navbar-center">
-            <spn class="nav-icon">
+            <span class="nav-icon">
                 <i class="fas fa-bars"></i>
-            </spn>
+            </span>
             <img src="./images/logo.svg" alt = "Our Logo">
             <div class="cart-btn">
-                <spn class="nav-icon">
+                <span class="nav-icon">
                     <i class="fas fa-cart-plus"></i>
-                </spn> 
+                </span> 
                 <div class="cart-items">
                     0
                 </div>
@@ -56,7 +56,7 @@
                     </button>
                 </div>
                 <h3>queen bed</h3>
-                <h4>$156</h4>
+                <h4>$800.00</h4>
             </article>
             <!-- end of single product-->
         </div>
@@ -98,4 +98,4 @@
     <!-- end of cart -->
     <script src ="apps/app.js"></script>
 </body>
-</html> 
+</html>
