--- a/index.html
+++ b/index.html
@@ -42,137 +42,7 @@
         <div class="section-title">
             <h2>Avaliable Products</h2>
         </div>
-        <div class="products-center">
-            <!-- single product-->
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/bos-mens-watch-aw748dqo/" target="_blank">
-                        <img src="images/w1.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/carnival-ladies-watch-aw158gag/" target="_blank">
-                        <img src="images/w2.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/bos-mens-watch-aw748dqo/" target="_blank">
-                        <img src="images/w3.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/carnival-mens-watch-aw344cpz/" target="_blank">
-                        <img src="images/w4.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/carnival-mens-watches-aw143dpi/" target="_blank">
-                        <img src="images/w5.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/carnival-mens-watch-aw587itg/" target="_blank">
-                        <img src="images/w6.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/carnival-ladies-watch-aw525iqe/" target="_blank">
-                        <img src="images/w7.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <article class="product">
-                <div class="img-container">
-                    <a href="https://amzwatches.com/product/nesun-mens-watch-aw770mrm/" target="_blank">
-                        <img src="images/w8.jpg" alt ="" class="product-img">
-                    </a>
-                    <button class="bag-btn" data-id= "1">
-                        <i class="fas fa-shopping-cart"></i>
-                        add to the cart
-                    </button>
-                    <button class="bag-btn1" data-id= "1">
-                        <i class="far fa-heart"></i>
-                    </button>
-                </div>
-                <h3>queen bed</h3>
-                <h4>$800.00</h4>
-            </article>
-            <!-- end of single product-->
+        <div class="products-center"> 
         </div>
     </section>
     <!-- end of Products -->
@@ -186,8 +56,7 @@
                 <div class="cart-content">
                     <!--cart item-->
                     <div class="cart-item">
-                        <img src="./images/product-1.jpeg" alt="product">
-                    
+                        <img src="./images/w2.jpg" alt="product">
                     <div>
                         <h4>queen bed</h4>
                         <h5>$165.00</h5>
