--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div class="section-title">
             <h2>Avaliable Products</h2>
         </div>
-        <div class="products-center"> 
+        <div class="products-center">
+            <!--All Products will go here-->
         </div>
     </section>
     <!-- end of Products -->
@@ -56,19 +57,7 @@
                 <div class="cart-content">
                     <!--cart item-->
                     <div class="cart-item">
-                        <img src="./images/w2.jpg" alt="product">
-                    <div>
-                        <h4>queen bed</h4>
-                        <h5>$165.00</h5>
-                        <span class="remove-item">remove</span>
-                    </div>
-                    <div>
-                        <i class="fas fa-plus-square"></i>
-                        <!--<i class="fas fa-chevron-up"></i>-->
-                        <p class="item-amount">0</p>
-                        <i class="fas fa-minus-square"></i>
-                        <!--<i class="fas fa-chevron-down"></i>-->
-                    </div>
+                        <!--carts will go here dynamically-->
                 </div>
                     <!--end of cart item-->
                 </div>
