--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <div class="cart-items">
                     0
                 </div>
-                
             </div>
         </div>
     </nav>
@@ -97,14 +96,33 @@
        
     </div>
 <!-- end of User card -->
-<!--footer
+<!--footer-->
 <footer>
-    <div class="footer-center">
-        <p>All Copy right reserved &#64; 2020</p>
-    </div>
-   
+    <nav class="footer">
+        <div class="footer-center">
+            <p>&#169;2020 FCIENS-Souq.com</p>
+        </div>
+        <div class="ul1">
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Media Center</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </div>
+        <div class="ul2">
+            <ul>
+                <li><a href="#">العربيه</a></li>
+                <li><a href="#">UAE</a></li>
+                <li><a href="#">Egypt</a></li>
+                <li><a href="#">Saudi</a></li>
+            </ul>
+        </div>
+    </nav>
 </footer>
-End footer-->
+<!--End footer-->
     <!-- ContentFul-->
     <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <!-- app.js -->
